--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-
+    <link href='http://fonts.googleapis.com/css?family=Lato:900,300italic' rel='stylesheet' type='text/css'>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -22,8 +23,6 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="offTheTruck">
-    <ion-pane>
-      <ion-nav-view></ion-nav-view>
-    </ion-pane>
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
